# notifica

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
apps/accounts/serializers/: usuario_serializer.py
apps/accounts/views/: register_view.py
apps/carrossel/: tests.py
apps/carrossel/views/: carrossel_view.py
apps/noticias/: serializers.py  tasks.py  tests.py
apps/noticias/migrations/: 0004_rename_sumario_noticia_corpo.py
apps/noticias/models/: noticia.py
apps/noticias/views/: noticia_view.py
apps/postagens/: tests.py
apps/postagens/migrations/: 0006_postagem_disponivel_postagem_titulo.py  0007_postagem_cor_fundo_postagem_imagem.py
apps/postagens/models/: postagem.py
apps/postagens/serializers/: __init__.py  postagem_input_serializer.py  postagem_output_serializer.py
apps/postagens/views/: postagem_viewset.py
core/: serializers.py  settings.py
docker/: entrypoint.sh
docker/mariadb/: my.cnf
scripts/: logger.py
scripts/bots/: __init__.py  base_crawler.py  cnn.py  g1.py  metropoles.py  uol.py
scripts/services/: vector_database.py
