[project]
name = "notifica"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Teixeira",email = "yuriteixeirac@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "mysqlclient (>=2.2.8,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
